fixed chatroom white space at the bottom, banner img for booking details and reviews

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -128,7 +128,8 @@ li {
   background-size: 240% 240%;
   animation: gradient-animation 28s ease infinite;
   opacity: 0.8;
-  margin-bottom:40px;
+  margin-bottom:0px;
+  padding-bottom:20px;
 }
 .chatroom-title{
   display: flex;
