--- a/app/assets/stylesheets/components/_orders_index.scss
+++ b/app/assets/stylesheets/components/_orders_index.scss
@@ -18,3 +18,13 @@
   border-radius: 8px;
   width: 120px;
 }
+
+.order-table td {
+  vertical-align: center;
+
+}
+
+.order-details-banner {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
